--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700&family=Karla:wght@400;700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="./src/assets/cloud.png" type="image/x-icon">
-    <title>CLIMAPP</title>
+    <title>Weather</title>
   </head>
   <body>
     <header>
       <div class="logo">
-        <h1>CLIMAPP</h1>
+        <h1>Weather Flexx App</h1>
         <img src="../src/assets/cloud.png" alt="Logo">
       </div>
       <ul>
@@ -24,14 +24,14 @@
           </a>
         </li>
         <li>
-          <a target="_blank" href="">
+          <a target="_blank" href="https://www.linkedin.com/in/flexx-n1/">
           <img src="../src/assets/contact.png" alt="Contáctame">
           Contáctame
           </a>
         </li>
 
         <li>
-          <a target="_blank" href="https://github.com/JoseGarcia2001/Simple-Weather-App">
+          <a target="_blank" href="https://github.com/FlexxN1/Weather-Flexx-App">
             <img src="../src/assets/github.png" alt="Repositorio">
             Mira el código
           </a>
@@ -50,6 +50,9 @@
         
       </div>
     </main>
-    <script type="module" src="../src/index.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js" integrity="sha512-AA1Bzp5Q0K1KanKKmvN/4d3IRKVlv9PYgwFPvm32nPO6QS8yH1HO7LbgB1pgiOxPtfeg5zEn2ba64MUcqJx6CA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script type="module" src="./src/index.js"></script>
   </body>
 </html>
